--- a/index.html
+++ b/index.html
@@ -102,12 +102,12 @@
                         </div>
                         <div class="tab-content" id="module-2-pdf">
                             <ul class="file-list">
-                                <li><a href="MCA/ADS Q.paper 2022.pdf" target="_blank" class="file-link"><span class="file-icon">📄</span>ADS Q.paper 2022.pdf</a></li>
-                                <li><a href="MCA/Cormen_Algorithms_3rd.pdf" target="_blank" class="file-link"><span class="file-icon">📄</span>Cormen_Algorithms_3rd.pdf</a></li>
-                                <li><a href="MCA/DAA 2021 Q.paper.pdf" target="_blank" class="file-link"><span class="file-icon">📄</span>DAA 2021 Q.paper.pdf</a></li>
-                                <li><a href="MCA/Daa 2022 Qpaper.pdf" target="_blank" class="file-link"><span class="file-icon">📄</span>Daa 2022 Qpaper.pdf</a></li>
-                                <li><a href="MCA/DAA....pdf" target="_blank" class="file-link"><span class="file-icon">📄</span>DAA....pdf</a></li>
-                                <li><a href="MCA/daa.pdf" target="_blank" class="file-link"><span class="file-icon">📄</span>daa.pdf</a></li>
+                                <li><a href="https://drive.google.com/file/d/1o8S7VN9zhkGSC1HsvSZVE7urbXJlpQkn/view?usp=drive_link" target="_blank" class="file-link"><span class="file-icon">📄</span>ADS Q.paper 2022.pdf</a></li>
+                                <li><a href="https://drive.google.com/file/d/1bT1AJ4WQb4mOoJWEUz6NWuH24ewGrQt_/view?usp=drive_link" target="_blank" class="file-link"><span class="file-icon">📄</span>Cormen_Algorithms_3rd.pdf</a></li>
+                                <li><a href="https://drive.google.com/file/d/1rXOAWpCQdcFpvRJfUDX8M6Oq3x8QjXBC/view?usp=drive_link" target="_blank" class="file-link"><span class="file-icon">📄</span>DAA 2021 Q.paper.pdf</a></li>
+                                <li><a href="https://drive.google.com/file/d/1UQUqzo6bXW2vTugbEhHIeNwE3ZXapjbR/view?usp=drive_link" target="_blank" class="file-link"><span class="file-icon">📄</span>Daa 2022 Qpaper.pdf</a></li>
+                                <li><a href="https://drive.google.com/file/d/1gj2oti52E12Yt4P7hzt4Ya3PbPrLmHlp/view?usp=drive_link" target="_blank" class="file-link"><span class="file-icon">📄</span>DAA....pdf</a></li>
+                                <li><a href="https://drive.google.com/file/d/1nTkc2l7h1nUJmwTLUicKtrEqN4sqfDUq/view?usp=drive_link" target="_blank" class="file-link"><span class="file-icon">📄</span>daa.pdf</a></li>
                             </ul>
                         </div>
                     </div>
@@ -134,10 +134,10 @@
                         </div>
                         <div class="tab-content" id="module-3-pdf">
                             <ul class="file-list">
-                                <li><a href="MCA/C3 OOP Concepts1.pdf" target="_blank" class="file-link"><span class="file-icon">📄</span>C3 OOP Concepts1.pdf</a></li>
-                                <li><a href="MCA/JAVA CAT-1.pdf" target="_blank" class="file-link"><span class="file-icon">📄</span>JAVA CAT-1.pdf</a></li>
-                                <li><a href="MCA/Java notes.pdf" target="_blank" class="file-link"><span class="file-icon">📄</span>Java notes.pdf</a></li>
-                                <li><a href="MCA/Python & Java , OS , Co&A 2022 Qpaper.pdf" target="_blank" class="file-link"><span class="file-icon">📄</span>Python & Java, OS, Co&A 2022 Qpaper.pdf</a></li>
+                               
+                                <li><a href="https://drive.google.com/file/d/1pxBHUk9YdiAnLL0M2GmBd20jmqQDWBBO/view?usp=drive_link" target="_blank" class="file-link"><span class="file-icon">📄</span>JAVA CAT-1.pdf</a></li>
+                                <li><a href="https://drive.google.com/file/d/1EWiZ2zqiydVwKzhJLn8l7E9T-jNVxb-_/view?usp=drive_link" target="_blank" class="file-link"><span class="file-icon">📄</span>Java notes.pdf</a></li>
+                                <li><a href="https://drive.google.com/file/d/1fNCGpr8DzuPe-Q1-lhG5zkCCkERs8Ghl/view?usp=drive_link" target="_blank" class="file-link"><span class="file-icon">📄</span>Python & Java, OS, Co&A 2022 Qpaper.pdf</a></li>
                             </ul>
                         </div>
                     </div>
@@ -164,7 +164,7 @@
                         </div>
                         <div class="tab-content" id="module-4-pdf">
                             <ul class="file-list">
-                                <li><a href="MCA/DBMS/DBMS @24.4.pptx" target="_blank" class="file-link"><span class="file-icon">📊</span>DBMS @24.4.pptx</a></li>
+                                <li><a href="https://drive.google.com/drive/folders/1yAyYlWn4yx0bPvF9gPI3t0-n9X1iflOG?usp=drive_link" target="_blank" class="file-link"><span class="file-icon">📊</span>DBMS @24.4.pptx</a></li>
                                 <li><a href="MCA/DBMS/Concurrency Control.pptx" target="_blank" class="file-link"><span class="file-icon">📊</span>Concurrency Control.pptx</a></li>
                                 <li><a href="MCA/DBMS/ctest#1Adv DBMS 24.docx" target="_blank" class="file-link"><span class="file-icon">📝</span>ctest#1Adv DBMS 24.docx</a></li>
                                 <li><a href="MCA/DBMS/DBMS @25.1.pptx" target="_blank" class="file-link"><span class="file-icon">📊</span>DBMS @25.1.pptx</a></li>
