--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                         </div>
                         <div class="tab-content" id="module-4-pdf">
                             <ul class="file-list">
-                                <li><a href="https://drive.google.com/drive/folders/1yAyYlWn4yx0bPvF9gPI3t0-n9X1iflOG?usp=drive_link" target="_blank" class="file-link"><span class="file-icon">📊</span>DBMS @24.4.pptx</a></li>
+                                <li><a href="MCA/DBMS/DBMS @24.4.pptx" target="_blank" class="file-link"><span class="file-icon">📊</span>DBMS @24.4.pptx</a></li>
                                 <li><a href="MCA/DBMS/Concurrency Control.pptx" target="_blank" class="file-link"><span class="file-icon">📊</span>Concurrency Control.pptx</a></li>
                                 <li><a href="MCA/DBMS/ctest#1Adv DBMS 24.docx" target="_blank" class="file-link"><span class="file-icon">📝</span>ctest#1Adv DBMS 24.docx</a></li>
                                 <li><a href="MCA/DBMS/DBMS @25.1.pptx" target="_blank" class="file-link"><span class="file-icon">📊</span>DBMS @25.1.pptx</a></li>
