--- a/index.html
+++ b/index.html
@@ -164,23 +164,23 @@
                         </div>
                         <div class="tab-content" id="module-4-pdf">
                             <ul class="file-list">
-                                <li><a href="MCA/DBMS/DBMS @24.4.pptx" target="_blank" class="file-link"><span class="file-icon">📊</span>DBMS @24.4.pptx</a></li>
-                                <li><a href="MCA/DBMS/Concurrency Control.pptx" target="_blank" class="file-link"><span class="file-icon">📊</span>Concurrency Control.pptx</a></li>
+                                <li><a href="https://docs.google.com/presentation/d/1_McsX4_VoyixvdwE0OX1n0FLnqyKNWjd/edit?usp=drive_link&ouid=114000386180503031772&rtpof=true&sd=true" target="_blank" class="file-link"><span class="file-icon">📊</span>DBMS @24.4.pptx</a></li>
+                                <li><a href="https://docs.google.com/presentation/d/1q-2w6hU2jCWZhA3RLtdklTPJhgWdSycy/edit?usp=drive_link&ouid=114000386180503031772&rtpof=true&sd=true" target="_blank" class="file-link"><span class="file-icon">📊</span>Concurrency Control.pptx</a></li>
                                 <li><a href="MCA/DBMS/ctest#1Adv DBMS 24.docx" target="_blank" class="file-link"><span class="file-icon">📝</span>ctest#1Adv DBMS 24.docx</a></li>
-                                <li><a href="MCA/DBMS/DBMS @25.1.pptx" target="_blank" class="file-link"><span class="file-icon">📊</span>DBMS @25.1.pptx</a></li>
-                                <li><a href="MCA/DBMS/DBMS @25.2.pptx" target="_blank" class="file-link"><span class="file-icon">📊</span>DBMS @25.2.pptx</a></li>
-                                <li><a href="MCA/DBMS/DBMS @25.3.pptx" target="_blank" class="file-link"><span class="file-icon">📊</span>DBMS @25.3.pptx</a></li>
-                                <li><a href="MCA/DBMS/DBMS @25.4.pptx" target="_blank" class="file-link"><span class="file-icon">📊</span>DBMS @25.4.pptx</a></li>
-                                <li><a href="MCA/DBMS/DBMS @25.5.pptx" target="_blank" class="file-link"><span class="file-icon">📊</span>DBMS @25.5.pptx</a></li>
-                                <li><a href="MCA/DBMS/dbms class.pptx" target="_blank" class="file-link"><span class="file-icon">📊</span>dbms class.pptx</a></li>
-                                <li><a href="MCA/DBMS/DEADLOCKS.pptx" target="_blank" class="file-link"><span class="file-icon">📊</span>DEADLOCKS.pptx</a></li>
-                                <li><a href="MCA/DBMS/Integrity constraints and Fun Dep.pptx" target="_blank" class="file-link"><span class="file-icon">📊</span>Integrity constraints and Fun Dep.pptx</a></li>
-                                <li><a href="MCA/DBMS/NORMALIZATION.pptx" target="_blank" class="file-link"><span class="file-icon">📊</span>NORMALIZATION.pptx</a></li>
-                                <li><a href="MCA/DBMS/parallel database.pptx" target="_blank" class="file-link"><span class="file-icon">📊</span>parallel database.pptx</a></li>
-                                <li><a href="MCA/DBMS/Querry Optimization.pptx" target="_blank" class="file-link"><span class="file-icon">📊</span>Querry Optimization.pptx</a></li>
-                                <li><a href="MCA/DBMS/Querry processing and Indexing, Hashing.pptx" target="_blank" class="file-link"><span class="file-icon">📊</span>Querry processing and Indexing, Hashing.pptx</a></li>
-                                <li><a href="MCA/DBMS/RECOVERY SYSTEM.pptx" target="_blank" class="file-link"><span class="file-icon">📊</span>RECOVERY SYSTEM.pptx</a></li>
-                                <li><a href="MCA/DBMS/Transactions and Serializability.pptx" target="_blank" class="file-link"><span class="file-icon">📊</span>Transactions and Serializability.pptx</a></li>
+                                <li><a href="https://docs.google.com/presentation/d/13WIEOb9I43vUeahoJsJZlJjEZOACp4T8/edit?usp=drive_link&ouid=114000386180503031772&rtpof=true&sd=true" target="_blank" class="file-link"><span class="file-icon">📊</span>DBMS @25.1.pptx</a></li>
+                                <li><a href="https://docs.google.com/presentation/d/1ZVYrxW6RH5E6Piwej8WckVz13QXk9FpA/edit?usp=drive_link&ouid=114000386180503031772&rtpof=true&sd=true" target="_blank" class="file-link"><span class="file-icon">📊</span>DBMS @25.2.pptx</a></li>
+                                <li><a href="https://docs.google.com/presentation/d/1j0Ll7D4HmhWqfnKmY6A694AUEN3h36r4/edit?usp=drive_link&ouid=114000386180503031772&rtpof=true&sd=true" target="_blank" class="file-link"><span class="file-icon">📊</span>DBMS @25.3.pptx</a></li>
+                                <li><a href="https://docs.google.com/presentation/d/1qRS6u5ZUAbYAOBbxCWyFCUuwtTgbfPCG/edit?usp=drive_link&ouid=114000386180503031772&rtpof=true&sd=true" target="_blank" class="file-link"><span class="file-icon">📊</span>DBMS @25.4.pptx</a></li>
+                                <li><a href="https://docs.google.com/presentation/d/15VR0pYpQVwlyB5BwdWEmVLQrMkezzQlI/edit?usp=drive_link&ouid=114000386180503031772&rtpof=true&sd=true" target="_blank" class="file-link"><span class="file-icon">📊</span>DBMS @25.5.pptx</a></li>
+                                <li><a href="https://docs.google.com/presentation/d/1L2uDXWpE_Qj_8vutWj6QDbW7bSefntng/edit?usp=drive_link&ouid=114000386180503031772&rtpof=true&sd=true" target="_blank" class="file-link"><span class="file-icon">📊</span>dbms class.pptx</a></li>
+                                <li><a href="https://docs.google.com/presentation/d/1nhSCwDRoRRmZtINA3v9KErEeGVjAFbUO/edit?usp=drive_link&ouid=114000386180503031772&rtpof=true&sd=true" target="_blank" class="file-link"><span class="file-icon">📊</span>DEADLOCKS.pptx</a></li>
+                                <li><a href="https://docs.google.com/presentation/d/1m-OKsMcyRuRrc8_GYui9r8ALV3rvzNnJ/edit?usp=drive_link&ouid=114000386180503031772&rtpof=true&sd=true" target="_blank" class="file-link"><span class="file-icon">📊</span>Integrity constraints and Fun Dep.pptx</a></li>
+                                <li><a href="https://docs.google.com/presentation/d/1OBHq0yJ_FHRinH_pVqihsNitgiIBARFT/edit?usp=drive_link&ouid=114000386180503031772&rtpof=true&sd=true" target="_blank" class="file-link"><span class="file-icon">📊</span>NORMALIZATION.pptx</a></li>
+                                <li><a href="https://docs.google.com/presentation/d/1yOvp-xT7hdn9yHxh0mKE4A0o29fUMPc5/edit?usp=drive_link&ouid=114000386180503031772&rtpof=true&sd=true" target="_blank" class="file-link"><span class="file-icon">📊</span>parallel database.pptx</a></li>
+                                <li><a href="https://docs.google.com/presentation/d/1eHj0s4Ckf813LPhNOMUG2Ow05ROE2Etf/edit?usp=drive_link&ouid=114000386180503031772&rtpof=true&sd=true" target="_blank" class="file-link"><span class="file-icon">📊</span>Querry Optimization.pptx</a></li>
+                                <li><a href="https://docs.google.com/presentation/d/1LaEryKY4E4fM4iPv83mMNNedfWtdv0F4/edit?usp=drive_link&ouid=114000386180503031772&rtpof=true&sd=true" target="_blank" class="file-link"><span class="file-icon">📊</span>Querry processing and Indexing, Hashing.pptx</a></li>
+                                <li><a href="https://docs.google.com/presentation/d/1nzt99OKURqtYgB7QOA8KyjKpNDAx8YA0/edit?usp=drive_link&ouid=114000386180503031772&rtpof=true&sd=true" target="_blank" class="file-link"><span class="file-icon">📊</span>RECOVERY SYSTEM.pptx</a></li>
+                                <li><a href="https://docs.google.com/presentation/d/1USbmIqyMc_AHOMsbaFeY6sTI09_6gCff/edit?usp=drive_link&ouid=114000386180503031772&rtpof=true&sd=true" target="_blank" class="file-link"><span class="file-icon">📊</span>Transactions and Serializability.pptx</a></li>
                             </ul>
                         </div>
                     </div>
@@ -208,10 +208,10 @@
                         <div class="tab-content" id="module-5-pdf">
                             <ul class="file-list">
                                 <li><a href="MCA/Abraham-Silberschatz-Operating-System-Concepts.pdf" target="_blank" class="file-link"><span class="file-icon">📄</span>Abraham-Silberschatz-Operating-System-Concepts.pdf</a></li>
-                                <li><a href="MCA/OS cat -1.pdf" target="_blank" class="file-link"><span class="file-icon">📄</span>OS cat -1.pdf</a></li>
-                                <li><a href="MCA/OS Question Paper (2019).pdf" target="_blank" class="file-link"><span class="file-icon">📄</span>OS Question Paper (2019).pdf</a></li>
-                                <li><a href="MCA/OS-1.pdf" target="_blank" class="file-link"><span class="file-icon">📄</span>OS-1.pdf</a></li>
-                                <li><a href="MCA/OS....pdf" target="_blank" class="file-link"><span class="file-icon">📄</span>OS....pdf</a></li>
+                                <li><a href="https://drive.google.com/file/d/1QFi08a01JyjvcbiX6kN75d40XneLE3zX/view?usp=drive_link" target="_blank" class="file-link"><span class="file-icon">📄</span>OS cat -1.pdf</a></li>
+                                <li><a href="https://drive.google.com/file/d/1gjpgQz-SXD1OTDuY32xc8jgyYo6uPe0p/view?usp=drive_link" target="_blank" class="file-link"><span class="file-icon">📄</span>OS Question Paper (2019).pdf</a></li>
+                                <li><a href="https://drive.google.com/file/d/1QFi08a01JyjvcbiX6kN75d40XneLE3zX/view?usp=drive_link" target="_blank" class="file-link"><span class="file-icon">📄</span>OS-1.pdf</a></li>
+                                <li><a href="https://drive.google.com/file/d/1xPUBvR8eFVuKrwIS394V0QNyvCNkObyU/view?usp=drive_link" target="_blank" class="file-link"><span class="file-icon">📄</span>OS....pdf</a></li>
                             </ul>
                         </div>
                     </div>
@@ -238,8 +238,8 @@
                         </div>
                         <div class="tab-content" id="module-6-pdf">
                             <ul class="file-list">
-                                <li><a href="MCA/JAVA CAT-1.pdf" target="_blank" class="file-link"><span class="file-icon">📄</span>JAVA CAT-1.pdf</a></li>
-                                <li><a href="MCA/Java notes.pdf" target="_blank" class="file-link"><span class="file-icon">📄</span>Java notes.pdf</a></li>
+                                <li><a href="https://github.com/codewithgyan467/java" target="_blank" class="file-link"><span class="file-icon">📄</span>Every Practical Available on The github repo just click here and please kindly install github because you are doing fkng MCA</a></li>
+                              
                             </ul>
                         </div>
                     </div>
