--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                             <ul class="file-list">
                                 <li><a href="https://docs.google.com/presentation/d/1_McsX4_VoyixvdwE0OX1n0FLnqyKNWjd/edit?usp=drive_link&ouid=114000386180503031772&rtpof=true&sd=true" target="_blank" class="file-link"><span class="file-icon">📊</span>DBMS @24.4.pptx</a></li>
                                 <li><a href="https://docs.google.com/presentation/d/1q-2w6hU2jCWZhA3RLtdklTPJhgWdSycy/edit?usp=drive_link&ouid=114000386180503031772&rtpof=true&sd=true" target="_blank" class="file-link"><span class="file-icon">📊</span>Concurrency Control.pptx</a></li>
-                                <li><a href="MCA/DBMS/ctest#1Adv DBMS 24.docx" target="_blank" class="file-link"><span class="file-icon">📝</span>ctest#1Adv DBMS 24.docx</a></li>
+                                <li><a href="https://docs.google.com/document/d/1RwGDmMkLBXaZzABGGI3M3pmla5vXmVYp/edit?usp=drive_link&ouid=114000386180503031772&rtpof=true&sd=true" target="_blank" class="file-link"><span class="file-icon">📝</span>ctest#1Adv DBMS 24.docx</a></li>
                                 <li><a href="https://docs.google.com/presentation/d/13WIEOb9I43vUeahoJsJZlJjEZOACp4T8/edit?usp=drive_link&ouid=114000386180503031772&rtpof=true&sd=true" target="_blank" class="file-link"><span class="file-icon">📊</span>DBMS @25.1.pptx</a></li>
                                 <li><a href="https://docs.google.com/presentation/d/1ZVYrxW6RH5E6Piwej8WckVz13QXk9FpA/edit?usp=drive_link&ouid=114000386180503031772&rtpof=true&sd=true" target="_blank" class="file-link"><span class="file-icon">📊</span>DBMS @25.2.pptx</a></li>
                                 <li><a href="https://docs.google.com/presentation/d/1j0Ll7D4HmhWqfnKmY6A694AUEN3h36r4/edit?usp=drive_link&ouid=114000386180503031772&rtpof=true&sd=true" target="_blank" class="file-link"><span class="file-icon">📊</span>DBMS @25.3.pptx</a></li>
@@ -196,7 +196,7 @@
                         </div>
                         <div class="tab-content" id="module-5-pdf">
                             <ul class="file-list">
-                                <li><a href="MCA/Abraham-Silberschatz-Operating-System-Concepts.pdf" target="_blank" class="file-link"><span class="file-icon">📄</span>Abraham-Silberschatz-Operating-System-Concepts.pdf</a></li>
+                                <li><a href="https://drive.google.com/file/d/1qTgEpk1pUKpx3VqWq7_zsRqJLsJ4GOMM/view?usp=drive_link" target="_blank" class="file-link"><span class="file-icon">📄</span>Abraham-Silberschatz-Operating-System-Concepts.pdf</a></li>
                                 <li><a href="https://drive.google.com/file/d/1QFi08a01JyjvcbiX6kN75d40XneLE3zX/view?usp=drive_link" target="_blank" class="file-link"><span class="file-icon">📄</span>OS cat -1.pdf</a></li>
                                 <li><a href="https://drive.google.com/file/d/1gjpgQz-SXD1OTDuY32xc8jgyYo6uPe0p/view?usp=drive_link" target="_blank" class="file-link"><span class="file-icon">📄</span>OS Question Paper (2019).pdf</a></li>
                                 <li><a href="https://drive.google.com/file/d/1QFi08a01JyjvcbiX6kN75d40XneLE3zX/view?usp=drive_link" target="_blank" class="file-link"><span class="file-icon">📄</span>OS-1.pdf</a></li>
