--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                     </div>
                     <div class="module-body">
                         <ul class="file-list">
-                            <li><a href="MCA/COA cat -1.pdf" target="_blank" class="file-link"><span class="file-icon">📝</span>COA CAT-1 Question Paper</a></li>
+                            <li><a href="https://drive.google.com/file/d/1lhr_E3v_bpTh7wcN7bMhG-H9L4CSemGu/view?usp=drive_link" target="_blank" class="file-link"><span class="file-icon">📝</span>COA CAT-1 Question Paper</a></li>
                         </ul>
                     </div>
                 </div>
@@ -274,9 +274,9 @@
                     </div>
                     <div class="module-body">
                         <ul class="file-list">
-                            <li><a href="MCA/ADS Q.paper 2022.pdf" target="_blank" class="file-link"><span class="file-icon">📝</span>ADS Q.paper 2022</a></li>
-                            <li><a href="MCA/DAA 2021 Q.paper.pdf" target="_blank" class="file-link"><span class="file-icon">📝</span>DAA 2021 Q.paper</a></li>
-                            <li><a href="MCA/Daa 2022 Qpaper.pdf" target="_blank" class="file-link"><span class="file-icon">📝</span>DAA 2022 Qpaper</a></li>
+                           
+                            <li><a href="https://drive.google.com/file/d/1rXOAWpCQdcFpvRJfUDX8M6Oq3x8QjXBC/view?usp=sharing" target="_blank" class="file-link"><span class="file-icon">📝</span>DAA 2021 Q.paper</a></li>
+                            <li><a href="https://drive.google.com/file/d/1UQUqzo6bXW2vTugbEhHIeNwE3ZXapjbR/view?usp=drive_link" target="_blank" class="file-link"><span class="file-icon">📝</span>DAA 2022 Qpaper</a></li>
                         </ul>
                     </div>
                 </div>
@@ -290,8 +290,7 @@
                     </div>
                     <div class="module-body">
                         <ul class="file-list">
-                            <li><a href="MCA/JAVA CAT-1.pdf" target="_blank" class="file-link"><span class="file-icon">📝</span>JAVA CAT-1 Paper</a></li>
-                            <li><a href="MCA/Python & Java , OS , Co&A 2022 Qpaper.pdf" target="_blank" class="file-link"><span class="file-icon">📝</span>Python, Java, OS, Co&A 2022 Combined Paper</a></li>
+                            <li><a href="https://drive.google.com/file/d/1fNCGpr8DzuPe-Q1-lhG5zkCCkERs8Ghl/view?usp=drive_link" target="_blank" class="file-link"><span class="file-icon">📝</span>Python, Java, OS, Co&A 2022 Combined Paper</a></li>
                         </ul>
                     </div>
                 </div>
@@ -305,8 +304,9 @@
                     </div>
                     <div class="module-body">
                         <ul class="file-list">
-                            <li><a href="MCA/DBMS/ctest#1Adv DBMS 24.docx" target="_blank" class="file-link"><span class="file-icon">📝</span>Advanced DBMS Test 2024</a></li>
-                        </ul>
+                            <li><a href="https://docs.google.com/document/d/1RwGDmMkLBXaZzABGGI3M3pmla5vXmVYp/edit?usp=drive_link&ouid=114000386180503031772&rtpof=true&sd=true" target="_blank" class="file-link"><span class="file-icon">📝</span>Advanced DBMS Cat-1</a></li>
+                        <li><a href="https://drive.google.com/file/d/1o8S7VN9zhkGSC1HsvSZVE7urbXJlpQkn/view?usp=drive_link" target="_blank" class="file-link"><span class="file-icon">📝</span>Advanced DBMS Test 2024</a></li>
+                    </ul>
                     </div>
                 </div>
 
@@ -319,8 +319,7 @@
                     </div>
                     <div class="module-body">
                         <ul class="file-list">
-                            <li><a href="OS cat -1.pdf" target="_blank" class="file-link"><span class="file-icon">📝</span>OS CAT-1 Paper</a></li>
-                            <li><a href="OS Question Paper (2019).pdf" target="_blank" class="file-link"><span class="file-icon">📝</span>OS Question Paper (2019)</a></li>
+                        <li><a href="https://drive.google.com/file/d/1gjpgQz-SXD1OTDuY32xc8jgyYo6uPe0p/view?usp=drive_link" target="_blank" class="file-link"><span class="file-icon">📝</span>OS Question Paper (2019)</a></li>
                         </ul>
                     </div>
                 </div>
@@ -334,7 +333,7 @@
                     </div>
                     <div class="module-body">
                         <ul class="file-list">
-                            <li><a href="MCA/JAVA CAT-1.pdf" target="_blank" class="file-link"><span class="file-icon">📝</span>JAVA CAT-1 Paper</a></li>
+                            <li><a href=" " target="_blank" class="file-link"><span class="file-icon">📝</span>JAVA LAB CAT-1 Paper(Not available now)</a></li>
                         </ul>
                     </div>
                 </div>
@@ -348,8 +347,8 @@
                     </div>
                     <div class="module-body">
                         <ul class="file-list">
-                            <li><a href="MCA/1st sem 2023.pdf" target="_blank" class="file-link"><span class="file-icon">📝</span>1st Semester 2023</a></li>
-                            <li><a href="MCA/1st sem 2024.pdf" target="_blank" class="file-link"><span class="file-icon">📝</span>1st Semester 2024</a></li>
+                            <li><a href="https://drive.google.com/file/d/1n-BbLJb5P4_MhDQCHf7cBUyVcJwn29fO/view?usp=drive_link" target="_blank" class="file-link"><span class="file-icon">📝</span>1st Semester 2023</a></li>
+                            <li><a href="https://drive.google.com/file/d/1DDqPJtt5T-nKCKHZAZCJvG7yy4LCiFjx/view?usp=drive_link" target="_blank" class="file-link"><span class="file-icon">📝</span>1st Semester 2024</a></li>
                         </ul>
                     </div>
                 </div>
