--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
 <body class="theme-normal">
+    <!-- Audio Element for Axomia Music -->
+<audio id="axomia-audio" src="axomia.mp3" loop></audio>
+
 
 <!-- Theme Selector -->
 <div class="theme-selector-container">
@@ -15,7 +18,7 @@
     <div class="theme-dropdown" id="theme-dropdown">
         <button class="theme-option" data-theme="girly">💕 Girly</button>
         <button class="theme-option" data-theme="boy">🦇 Boy</button>
-        <button class="theme-option" data-theme="normal">✨ Normal</button>
+        <button class="theme-option" data-theme="normal">✨Khati AXOMIA KELA</button>
     </div>
 </div>
 
