gayyyy people hunt

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         <button class="theme-option" data-theme="girly">💕 Girly</button>
         <button class="theme-option" data-theme="boy">🦇 Boy</button>
         <button class="theme-option" data-theme="normal">✨Khati AXOMIA KELA</button>
+      <button class="theme-option" data-theme="normal" onclick="window.location.href='gay.jpg'">Others🌈🌚</button>
+
     </div>
 </div>
 
