--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <button class="theme-option" data-theme="girly">💕 Girly</button>
         <button class="theme-option" data-theme="boy">🦇 Boy</button>
         <button class="theme-option" data-theme="normal">✨Khati AXOMIA KELA</button>
-      <button class="theme-option" data-theme="normal" onclick="window.location.href='gay.jpg'">Others🌈🌚</button>
+      <button class="theme-option" data-theme="normal" onclick="window.location.href='Gay.jpg'">Others🌈🌚</button>
 
     </div>
 </div>
