--- a/index.html
+++ b/index.html
@@ -243,7 +243,9 @@
                     <p class="module-name">Computer Organization and Architecture</p>
                 </div>
                 <ul class="file-list">
-                    <li><a href="https://drive.google.com/file/d/1lhr_E3v_bpTh7wcN7bMhG-H9L4CSemGu/view?usp=drive_link" target="_blank" class="file-link">📝 COA CAT-1 Question Paper</a></li>
+                    <li><a href="https://drive.google.com/file/d/1nG-wtRwH3qEva3IRykcMUDf9IqwWkJFd/view?usp=drive_link" target="_blank" class="file-link">📝 COA ALL Question Paper</a></li>
+                     <li><a href="https://drive.google.com/file/d/1lhr_E3v_bpTh7wcN7bMhG-H9L4CSemGu/view?usp=drive_link" target="_blank" class="file-link">📝 COA ALL Question Paper</a></li>
+
                 </ul>
             </div>
 
@@ -255,6 +257,7 @@
                     <p class="module-name">Design and Analysis of Algorithms</p>
                 </div>
                 <ul class="file-list">
+                                        <li><a href="https://drive.google.com/file/d/1C-rnV03avw59ZIbk-M25KVbd3aKISCQZ/view?usp=drive_link" target="_blank" class="file-link">📝 DAA 2018 Qpaper</a></li>
                     <li><a href="https://drive.google.com/file/d/1rXOAWpCQdcFpvRJfUDX8M6Oq3x8QjXBC/view?usp=sharing" target="_blank" class="file-link">📝 DAA 2021 Q.paper</a></li>
                     <li><a href="https://drive.google.com/file/d/1UQUqzo6bXW2vTugbEhHIeNwE3ZXapjbR/view?usp=drive_link" target="_blank" class="file-link">📝 DAA 2022 Qpaper</a></li>
                 </ul>
@@ -282,6 +285,7 @@
                 <ul class="file-list">
                     <li><a href="https://docs.google.com/document/d/1RwGDmMkLBXaZzABGGI3M3pmla5vXmVYp/edit?usp=drive_link&ouid=114000386180503031772&rtpof=true&sd=true" target="_blank" class="file-link">📝 Advanced DBMS Cat-1</a></li>
                     <li><a href="https://drive.google.com/file/d/1o8S7VN9zhkGSC1HsvSZVE7urbXJlpQkn/view?usp=drive_link" target="_blank" class="file-link">📝 Advanced DBMS Test 2024</a></li>
+                    <li><a href="https://drive.google.com/file/d/1o8S7VN9zhkGSC1HsvSZVE7urbXJlpQkn/view?usp=drive_link" target="_blank" class="file-link">📝Advanced DBMS Test 2022</a></li>
                 </ul>
             </div>
 
@@ -300,9 +304,9 @@
             <!-- Paper 6 -->
             <div class="glass-card">
                 <div class="module-header">
-                    <span class="category-tag practical">Practical</span>
+                    <span class="category-tag practical">Practical And All subject mixed paper</span>
                     <h3 class="module-code">MCA202116</h3>
-                    <p class="module-name">Laboratory - Java and Assembly Language Programming</p>
+                    <p class="module-name">Mixed all subject Papers</p>
                 </div>
                 <ul class="file-list">
                     <li><a href="#" class="file-link">📝 JAVA LAB CAT-1 Paper (Not available now)</a></li>
