--- a/index.html
+++ b/index.html
@@ -304,9 +304,9 @@
             <!-- Paper 6 -->
             <div class="glass-card">
                 <div class="module-header">
-                    <span class="category-tag practical">Practical And All subject mixed paper</span>
+                    <span class="category-tag practical">Practical</span>
                     <h3 class="module-code">MCA202116</h3>
-                    <p class="module-name">Mixed all subject Papers</p>
+                    <p class="module-name">Lab papers</p>
                 </div>
                 <ul class="file-list">
                     <li><a href="#" class="file-link">📝 JAVA LAB CAT-1 Paper (Not available now)</a></li>
