--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <div class="tab-content" id="module-1-pdf">
                         <ul class="file-list">
                             <li><a href="https://drive.google.com/file/d/1PZ2RF5gHNdHHKBlD3uoAD1idyWuvFAI9/view?usp=drive_link" target="_blank" class="file-link">📄 COA cat -1.pdf</a></li>
-                            <li><a href="https://drive.google.com/file/d/1dV_RBAFLVuSftipxw8LC02AGDuW533r0/view?usp=drive_link" target="_blank" class="file-link">📄 COA notes.pdf</a></li>
+                            <li><a href="https://drive.google.com/file/d/1dV_RBAFLVuSftipxw8LC02AGDuW533r0/view?usp=drive_link" target="_blank" class="file-link">📄 COA notes.pdf(This are  older but complete notes from 2024 batch Ritabrat so they may be not perfect so i prefer class notes more)</a></li>
                             <li><a href="https://drive.google.com/file/d/1nAyL5kuxJMMu27POVXWF-jWbR9laLVbR/view?usp=drive_link" target="_blank" class="file-link">📄 COA....pdf</a></li>
                         </ul>
                     </div>
