--- a/index.html
+++ b/index.html
@@ -35,12 +35,14 @@
                     <div class="card-icon">📚</div>
                     <h2>MCA Notes</h2>
                     <p>Comprehensive notes for all modules</p>
+                     <p>CLick Here </p>
                     <div class="card-arrow">→</div>
                 </div>
                 <div class="glass-card main-card" onclick="navigateTo('papers')">
                     <div class="card-icon">📝</div>
                     <h2>Question Papers</h2>
                     <p>Previous year papers</p>
+                    <p>Click Here</p>
                     <div class="card-arrow">→</div>
                 </div>
             </div>
@@ -67,15 +69,15 @@
                 <div class="module-body">
                     <div class="tabs">
                         <button class="tab active" onclick="switchTab(event, 1, 'image')">Image</button>
-                        <button class="tab" onclick="switchTab(event, 1, 'pdf')">PDF</button>
+                        <button class="tab" onclick="switchTab(event, 1, 'pdf')">PDF(Click Here)</button>
                     </div>
                     <div class="tab-content active" id="module-1-image">
                         <img src="coa.jpg" alt="COA Notes" class="module-image">
                     </div>
                     <div class="tab-content" id="module-1-pdf">
                         <ul class="file-list">
-                            <li><a href="https://drive.google.com/file/d/1PZ2RF5gHNdHHKBlD3uoAD1idyWuvFAI9/view?usp=drive_link" target="_blank" class="file-link">📄 COA cat -1.pdf</a></li>
-                            <li><a href="https://drive.google.com/file/d/1dV_RBAFLVuSftipxw8LC02AGDuW533r0/view?usp=drive_link" target="_blank" class="file-link">📄 COA notes.pdf(This are  older but complete notes from 2024 batch Ritabrat so they may be not perfect so i prefer class notes more)</a></li>
+                            <li><a href="https://drive.google.com/file/d/1PZ2RF5gHNdHHKBlD3uoAD1idyWuvFAI9/view?usp=drive_link" target="_blank" class="file-link">📄 COA cat -1.pdf(Click Here)</a></li>
+                            <li><a href="https://drive.google.com/file/d/1dV_RBAFLVuSftipxw8LC02AGDuW533r0/view?usp=drive_link" target="_blank" class="file-link">📄 COA notes.pdf<p>(This are  older but complete notes from our Respected senior 2024 batch of Ritabrat so they may be not perfect for our syllabus but can be a good source reference so i prefer class notes more)</p></a></li>
                             <li><a href="https://drive.google.com/file/d/1nAyL5kuxJMMu27POVXWF-jWbR9laLVbR/view?usp=drive_link" target="_blank" class="file-link">📄 COA....pdf</a></li>
                         </ul>
                     </div>
@@ -104,7 +106,7 @@
                             <li><a href="https://drive.google.com/file/d/1rXOAWpCQdcFpvRJfUDX8M6Oq3x8QjXBC/view?usp=drive_link" target="_blank" class="file-link">📄 DAA 2021 Q.paper.pdf</a></li>
                             <li><a href="https://drive.google.com/file/d/1UQUqzo6bXW2vTugbEhHIeNwE3ZXapjbR/view?usp=drive_link" target="_blank" class="file-link">📄 Daa 2022 Qpaper.pdf</a></li>
                             <li><a href="https://drive.google.com/file/d/1gj2oti52E12Yt4P7hzt4Ya3PbPrLmHlp/view?usp=drive_link" target="_blank" class="file-link">📄 DAA....pdf</a></li>
-                            <li><a href="https://drive.google.com/file/d/1nTkc2l7h1nUJmwTLUicKtrEqN4sqfDUq/view?usp=drive_link" target="_blank" class="file-link">📄 daa.pdf</a></li>
+                            <li><a href="https://drive.google.com/file/d/1nTkc2l7h1nUJmwTLUicKtrEqN4sqfDUq/view?usp=drive_link" target="_blank" class="file-link">📄 daa.pdf<p>(This are  older but complete notes from our Respected senior 2024 batch Ritabrat so they may be not perfect so i prefer class notes more)</p></a></li>
                         </ul>
                     </div>
                 </div>
@@ -128,7 +130,7 @@
                     <div class="tab-content" id="module-3-pdf">
                         <ul class="file-list">
                             <li><a href="https://drive.google.com/file/d/1pxBHUk9YdiAnLL0M2GmBd20jmqQDWBBO/view?usp=drive_link" target="_blank" class="file-link">📄 JAVA CAT-1.pdf</a></li>
-                            <li><a href="https://drive.google.com/file/d/1EWiZ2zqiydVwKzhJLn8l7E9T-jNVxb-_/view?usp=drive_link" target="_blank" class="file-link">📄 Java notes.pdf</a></li>
+                            <li><a href="https://drive.google.com/file/d/1EWiZ2zqiydVwKzhJLn8l7E9T-jNVxb-_/view?usp=drive_link" target="_blank" class="file-link">📄 Java notes.pdf<p>(This are  older but complete notes from our Respected senior 2024 batch Ritabrat so they may be not perfect so i prefer class notes more)</p></a></li>
                             <li><a href="https://drive.google.com/file/d/1fNCGpr8DzuPe-Q1-lhG5zkCCkERs8Ghl/view?usp=drive_link" target="_blank" class="file-link">📄 Python & Java, OS, Co&A 2022 Qpaper.pdf</a></li>
                         </ul>
                     </div>
