--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                             <li><a href="https://drive.google.com/file/d/1qTgEpk1pUKpx3VqWq7_zsRqJLsJ4GOMM/view?usp=drive_link" target="_blank" class="file-link">📄 Abraham-Silberschatz-Operating-System-Concepts.pdf</a></li>
                             <li><a href="https://drive.google.com/file/d/1QFi08a01JyjvcbiX6kN75d40XneLE3zX/view?usp=drive_link" target="_blank" class="file-link">📄 OS cat -1.pdf</a></li>
                             <li><a href="https://drive.google.com/file/d/1gjpgQz-SXD1OTDuY32xc8jgyYo6uPe0p/view?usp=drive_link" target="_blank" class="file-link">📄 OS Question Paper (2019).pdf</a></li>
-                            <li><a href="https://drive.google.com/file/d/1xPUBvR8eFVuKrwIS394V0QNyvCNkObyU/view?usp=drive_link" target="_blank" class="file-link">📄 OS....pdf</a></li>
+                            <li><a href="https://drive.google.com/file/d/1xPUBvR8eFVuKrwIS394V0QNyvCNkObyU/view?usp=drive_link" target="_blank" class="file-link">📄 OS....pdf<p>(This are  older but complete notes from our Respected senior 2024 batch Ritabrat so they may be not perfect so i prefer class notes more)</p></a></li>
                         </ul>
                     </div>
                 </div>
