--- a/index.html
+++ b/index.html
@@ -327,6 +327,17 @@
                     <li><a href="https://drive.google.com/file/d/1DDqPJtt5T-nKCKHZAZCJvG7yy4LCiFjx/view?usp=drive_link" target="_blank" class="file-link">📝 1st Semester 2024</a></li>
                 </ul>
             </div>
+             <div class="glass-card">
+                <div class="module-header">
+                    <span class="category-tag practical">Leaked Question Papers 2025(including upcomming Cat exams😈)</span>
+                    <h3 class="module-code">ALL MODULES</h3>
+                    <p class="module-name">LEAKED PAPERS</p>
+                </div>
+                <ul class="file-list">
+                    <li><a href="paperleak.jpg" class="file-link">📝Leaked 2025 Question Papers🤫(click here)</a></li>
+                </ul>
+            </div>
+
         </div>
     </div>
 </section>
